# sketchbook

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/: camera.h  components.h  controllers.h  data_structures.h  engine_base.h  macros.h  registry.h  scene.h  sk_engine.h  sk_geometry.h  sk_initializers.h  sk_io.h  sk_types.h  sk_views.h  vulkan_init.h  vulkan_structs.h
engine/include/world/: actor.h  events.h  movement.h  physics.h  random.h  sk_world.h  world.h
engine/src/: camera.cpp  engine_base.cpp  sk_initializers.cpp  sk_io.cpp  vulkan_init.cpp
engine/src/world/: physics.cpp  world.cpp
engine/tst/: CMakeLists.txt  test_stringmap.cpp
vulkan_tutorial/: CMakeLists.txt
vulkan_tutorial/assets/: wedge.mtl
vulkan_tutorial/shaders/: colored_triangle.vert  mesh_descriptor.vert
vulkan_tutorial/tool/: main.cpp
vulkan_tutorial/tool/include/: vulkan_tutorial.h
